add DC DUNN, DUNN, CVNN and DSI

--- a/data/DensiredDatasets.ipynb
+++ b/data/DensiredDatasets.ipynb
@@ -36,12 +36,12 @@
     "\n",
     "from src.Evaluation.dcdistances.dctree import DCTree\n",
     "\n",
-    "from src.Evaluation.CDBW.CDBW import CDbw as CDBW\n",
-    "from src.Evaluation.CVDD.CVDD import CVDDIndex as CVDD\n",
-    "from src.Evaluation.DBCV.DBCV_Base import validity_index as DBCV\n",
-    "from src.Evaluation.DCSI.dcsi import dcsiscore as DCSI\n",
-    "from src.Evaluation.DISCO.disco import disco as DISCO\n",
-    "from src.Evaluation.S_Dbw.sdbw import S_Dbw as S_DBW\n",
+    "from src.Evaluation.CDBW.cdbw import cdbw_score as CDBW\n",
+    "from src.Evaluation.CVDD.cvdd import cvdd_score as CVDD\n",
+    "from src.Evaluation.DBCV.dbcv import dbcv_score as DBCV\n",
+    "from src.Evaluation.DCSI.dcsi import dcsi_score as DCSI\n",
+    "from src.Evaluation.DISCO.disco import disco_score as DISCO\n",
+    "from src.Evaluation.S_Dbw.sdbw import sdbw_score as S_DBW\n",
     "from src.Evaluation.Silhouette.silhouette import silhouette_score as SILHOUETTE\n",
     "\n",
     "from sklearn.metrics import silhouette_score as SILHOUETTE_SKLEARN\n",
