Refactored code and fixed bugs

--- a/data/__setup.ipynb
+++ b/data/__setup.ipynb
@@ -53,22 +53,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/export/share/pascalw777dm/DISCO\n"
+      "Do you really want to clear the cache?\n",
+      "Cache cleared.\n"
      ]
     }
    ],
    "source": [
     "# Clear Cache\n",
+    "import os\n",
+    "\n",
     "%store -r DISCO_ROOT_FOLDER\n",
     "os.chdir(DISCO_ROOT_FOLDER)\n",
-    "!rm ./.cache/*"
+    "print(\"Do you really want to clear the cache?\")\n",
+    "if input() in [\"y\", \"yes\"]:\n",
+    "    !rm ./.cache/*\n",
+    "    print(\"Cache cleared.\")\n",
+    "else:\n",
+    "    print(\"Cache NOT cleared.\")"
    ]
   },
   {
