--- a/data/DensiredDatasets.ipynb
+++ b/data/DensiredDatasets.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
      "start_time": "2024-07-03T14:10:29.446448Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -29,9 +20,15 @@
     "%store -r DISCO_ROOT_FOLDER\n",
     "if \"DISCO_ROOT_FOLDER\" in globals():\n",
     "    os.chdir(DISCO_ROOT_FOLDER)\n",
-    "    sys.path.append(DISCO_ROOT_FOLDER)\n",
-    "\n",
-    "\n",
+    "    sys.path.append(DISCO_ROOT_FOLDER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -43,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.627475Z",
@@ -79,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,22 +130,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creating new value for variable 'eval_results_densired_datasets'\n",
-      "Calc Dataset1\n",
-      "Calc Dataset2\n",
-      "Calc DatasetDensiredExample\n"
+      "Calc Dataset1\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m         eval_results[dataset\u001b[38;5;241m.\u001b[39mname] \u001b[38;5;241m=\u001b[39m calc_eval_measures(X, l, dataset\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m eval_results\n\u001b[0;32m---> 13\u001b[0m eval_results_densired_datasets \u001b[38;5;241m=\u001b[39m \u001b[43mcalc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m dataset \u001b[38;5;129;01min\u001b[39;00m DensiredDatasets:\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(dataset\u001b[38;5;241m.\u001b[39mname)\n",
+      "Cell \u001b[0;32mIn[6], line 10\u001b[0m, in \u001b[0;36mcalc\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCalc\u001b[39m\u001b[38;5;124m\"\u001b[39m, dataset\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m      9\u001b[0m     X, l \u001b[38;5;241m=\u001b[39m dataset\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m---> 10\u001b[0m     eval_results[dataset\u001b[38;5;241m.\u001b[39mname] \u001b[38;5;241m=\u001b[39m \u001b[43mcalc_eval_measures\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ml\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m eval_results\n",
+      "File \u001b[0;32m/export/share/pascalw777dm/DISCO/data/_util_experiments.py:78\u001b[0m, in \u001b[0;36mcalc_eval_measures\u001b[0;34m(X, l, metrics, name, runs, task_timeout)\u001b[0m\n\u001b[1;32m     75\u001b[0m     X_ \u001b[38;5;241m=\u001b[39m X[shuffle_data_index]\n\u001b[1;32m     76\u001b[0m     l_ \u001b[38;5;241m=\u001b[39m l[shuffle_data_index]\n\u001b[0;32m---> 78\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m metric_name, metric_fn \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmetrics\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[1;32m     79\u001b[0m         async_results[(run, metric_name)] \u001b[38;5;241m=\u001b[39m pool\u001b[38;5;241m.\u001b[39mapply_async(\n\u001b[1;32m     80\u001b[0m             exec_metric, args\u001b[38;5;241m=\u001b[39m(X_, l_, metric_fn), task_timeout\u001b[38;5;241m=\u001b[39mtask_timeout\n\u001b[1;32m     81\u001b[0m         )\n\u001b[1;32m     83\u001b[0m eval_results \u001b[38;5;241m=\u001b[39m defaultdict(\u001b[38;5;28mlist\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'items'"
      ]
     }
    ],
    "source": [
-    "import cache_magic\n",
     "import pandas as pd\n",
     "from data._util_experiments import calc_eval_measures, calc_eval_measures_for_multiple_datasets\n",
     "from data._util_plots import plot_barplot\n",
@@ -161,7 +167,7 @@
     "        eval_results[dataset.name] = calc_eval_measures(X, l, dataset.name)\n",
     "    return eval_results\n",
     "\n",
-    "%cache eval_results_densired_datasets = calc()\n",
+    "eval_results_densired_datasets = calc()\n",
     "\n",
     "\n",
     "for dataset in DensiredDatasets:\n",
@@ -191,7 +197,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
