More experiments and reorganized folder structure

--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data.real_world_datasets import Datasets as RealWorldDatasets\n",
+    "from datasets.real_world_datasets import Datasets as RealWorldDatasets\n",
     "\n",
     "configs = {\n",
     "    \"real_world\": {\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
