--- a/src/Experiments/_in_progress/Compactness and Separability.ipynb
+++ b/src/Experiments/_in_progress/Compactness and Separability.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +111,14 @@
    },
    "outputs": [],
    "source": [
-    "from data._util_experiments import cache, calc_eval_measures\n",
-    "from data._util_plots import plot_barplot\n",
-    "from data._metrics import create_and_filter_df"
+    "from src.utils.experiments import cache, calc_eval_measures\n",
+    "from src.utils.plots import plot_barplot\n",
+    "from src.utils.metrics import create_and_filter_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
