--- a/src/__setup.ipynb
+++ b/src/__setup.ipynb
@@ -81,6 +81,7 @@
     "print(\"Do you really want to clear the cache?\")\n",
     "if input() in [\"y\", \"yes\"]:\n",
     "    !rm ./.cache/*\n",
+    "    !rm ./datasets/.cache/*\n",
     "    print(\"Cache cleared.\")\n",
     "else:\n",
     "    print(\"Cache NOT cleared.\")"
