Run all JupyterNotebooks

--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -251,12 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for config_name, config in configs.items():\n",
-    "    generate_latex_file(**config)"
+    "from mpire.pool import WorkerPool\n",
+    "\n",
+    "pool = WorkerPool(n_jobs=30, use_dill=True)\n",
+    "pool.map_unordered(generate_latex_file, configs.values())\n",
+    "pool.stop_and_join()\n",
+    "pool.terminate()"
    ]
   },
   {
