Mehr Experimente + Rescaling von Metriken zwischen 0 und 1 in den Plots.

--- a/src/Stuff.ipynb
+++ b/src/Stuff.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5152374d5dfe420d9ef04a456e61da9f",
+       "model_id": "a6b2b06b25a34fdb882c08ef696e23a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,6 +169,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No such comm: a6b2b06b25a34fdb882c08ef696e23a9\n"
+     ]
     }
    ],
    "source": [
@@ -169,6 +185,40 @@
     "\n",
     "XX, l = RealWorldDatasets.Keck.standardized_data_cached\n",
     "plot_with_transformation(XX[l!=-1], l[l!=-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "%store -r DISCO_ROOT_FOLDER\n",
+    "if \"DISCO_ROOT_FOLDER\" in globals():\n",
+    "    os.chdir(DISCO_ROOT_FOLDER)\n",
+    "    sys.path.append(DISCO_ROOT_FOLDER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets.real_world_datasets import Datasets as RealWorldDatasets"
    ]
   },
   {
