--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -32,6 +32,8 @@
     "import glob\n",
     "import itertools\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "from collections import defaultdict\n",
     "from collections.abc import Mapping\n",
@@ -110,6 +112,7 @@
     "    generell_stuff_regex = [\n",
     "        r's/table/table\\*/g',\n",
     "        r's/_/\\\\_/g',\n",
+    "        r's/\\\\\\\\\\n/ \\\\\\\\\\n/g',\n",
     "        r'1 while s/\\$nan \\\\pm nan\\$/-/g',\n",
     "        # Two digits\n",
     "        r's/(\\d\\.\\d) /${{1}}0 /g',\n",
@@ -148,36 +151,75 @@
     "    run_regex(remove_second_row_index_regex, path)\n",
     "    run_regex(caption_regex, path)\n",
     "    if len(categories) > 0:\n",
-    "        run_regex(categories_regex, path)\n"
+    "        run_regex(categories_regex, path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.07, -0.87,  0.  ,  0.  ,  0.22, -0.01])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(df_selected.min(axis=0, skipna=True).values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def latex_coloring(path, axis=0, selection=None):\n",
+    "    df = pd.read_csv(path, sep=\"&\", header=0, index_col=1, skiprows=9, skipfooter=5, engine=\"python\")\n",
+    "    df = df.drop(df.columns[0], axis=1)\n",
+    "    df = df.drop(index=[None], axis=0)\n",
+    "    df.columns = df.columns.str.replace(\"\\\\\", \"\")\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "    df = df.replace(r\"\\$(.*)\\$(.*\\\\\\\\)?\", value=r\"\\1\", regex=True)\n",
+    "    df = df.astype(float)\n",
+    "\n",
+    "    if selection is None:\n",
+    "        selection = df.columns\n",
+    "    df_selected = df[selection]\n",
+    "\n",
+    "    df_min = df.copy()\n",
+    "    df_max = df.copy()\n",
+    "    df_min.loc[:, selection] = np.expand_dims(df_selected.min(axis=axis, skipna=True).values, axis=axis)  # type: ignore\n",
+    "    df_max.loc[:, selection] = np.expand_dims(df_selected.max(axis=axis, skipna=True).values, axis=axis)  # type: ignore\n",
+    "\n",
+    "    df_color_saturation = round((df - df_min) / (df_max - df_min) * 65) + 5\n",
+    "    df_color_saturation.replace(np.nan, 0, inplace=True)\n",
+    "    df_color_saturation = df_color_saturation.astype(int)\n",
+    "\n",
+    "    df_latex = df.astype(str).combine(df_color_saturation.astype(str), lambda value, color_saturation: \"\\\\cellcolor{\" + \"Green\" + \"!\" + color_saturation + \"} \" + value)\n",
+    "    df_latex.insert(0, \"dataset\", df_latex.index.str.strip())\n",
+    "    df_joined_columns = df_latex[df_latex.columns[:]].apply(lambda x: \" & \".join(x), axis=1)\n",
+    "    df_joined_columns = df_joined_columns.replace(\"\\\\\\\\\", \"\\\\\\\\\\\\\\\\\", regex=True)\n",
+    "    df_joined_columns.index = df_joined_columns.index.str.replace(\"\\\\\", \"\\\\\\\\\")\n",
+    "\n",
+    "    for dataset, row in df_joined_columns.items():\n",
+    "        run_regex([r's/%s.*\\\\\\\\/ %s \\\\\\\\/g'%(dataset, row)], path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "from clustpy.utils import evaluation_df_to_latex_table\n",
-    "\n",
-    "\n",
-    "METRICS = [\n",
-    "    \"DISCO\",\n",
-    "    \"DC_DUNN\",\n",
-    "    ### Competitors\n",
-    "    \"DBCV\",\n",
-    "    \"DCSI\",\n",
-    "    \"S_DBW\",\n",
-    "    \"CDBW\",\n",
-    "    \"CVDD\",\n",
-    "    \"CVNN\",\n",
-    "    \"DSI\",\n",
-    "    ### Gauss\n",
-    "    \"SILHOUETTE\",\n",
-    "    \"DUNN\",\n",
-    "    \"DB\",\n",
-    "    \"CH\",\n",
-    "]\n",
-    "\n",
+    "from src.utils.metrics import METRICS\n",
     "\n",
     "def generate_latex_file(\n",
     "    path,\n",
@@ -189,6 +231,8 @@
     "    caption=\"TODO\",\n",
     "    categories=[],\n",
     "    precision=3,\n",
+    "    latex_coloring_axis=None,\n",
+    "    latex_coloring_selection=None,\n",
     "):\n",
     "    df_list = gather_and_aggregate_data(\n",
     "        path, columns=selection, aggregation_funcs=aggregation_funcs\n",
@@ -204,16 +248,21 @@
     "        in_percent=False,\n",
     "        decimal_places=2,\n",
     "    )\n",
-    "    regex_file(latex_path, caption=caption, categories=categories)"
+    "    regex_file(latex_path, caption=caption, categories=categories)\n",
+    "\n",
+    "    if latex_coloring_axis is not None:\n",
+    "        latex_coloring(latex_path, latex_coloring_axis, latex_coloring_selection)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets.real_world_datasets import Datasets as RealWorldDatasets\n",
+    "from src.utils.metrics import METRICS, SELECTED_METRICS\n",
+    "\n",
     "\n",
     "configs = {\n",
     "    \"real_world\": {\n",
@@ -230,6 +279,10 @@
     "            (\"COIL20\", 3, \"Image\"),\n",
     "            (\"Optdigits\", 5, \"MNIST\"),\n",
     "        ],\n",
+    "        \"latex_coloring_axis\": 0,\n",
+    "        \"latex_coloring_selection\": None,\n",
+    "        # \"latex_coloring_axis\": 1,\n",
+    "        # \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
     "    },\n",
     "    \"real_world_standardized\": {\n",
     "        \"path\": \"results/real_world_standardized/\",\n",
@@ -245,13 +298,17 @@
     "            (\"COIL20\", 3, \"Image\"),\n",
     "            (\"Optdigits\", 5, \"MNIST\"),\n",
     "        ],\n",
+    "        \"latex_coloring_axis\": 0,\n",
+    "        \"latex_coloring_selection\": None,\n",
+    "        # \"latex_coloring_axis\": 1,\n",
+    "        # \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
     "    },\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
