--- a/src/Experiments/RunDatasetsJupyterNotebooks.ipynb
+++ b/src/Experiments/RunDatasetsJupyterNotebooks.ipynb
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_noise and minPoints.ipynb\n",
       "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_dims.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
       "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoBlobs_dist.ipynb\n",
       "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/Noise.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_noise and minPoints.ipynb\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
@@ -65,6 +65,33 @@
     "\n",
     "pool.stop_and_join()\n",
     "pool.terminate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "from PIL import Image, ImageOps\n",
+    "\n",
+    "def crop_png(path):\n",
+    "    im = Image.open(path)\n",
+    "    im = im.convert(\"RGB\")\n",
+    "    invert_im = ImageOps.invert(im)\n",
+    "    im2 = im.crop(invert_im.getbbox())\n",
+    "    im2.save(path)\n",
+    "\n",
+    "for path in glob.glob(\"imgs/*\"):\n",
+    "    crop_png(path)"
    ]
   },
   {
