refactor / rescale plots & experiments

--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 193,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +312,8 @@
     "    \"CVDD\",\n",
     "    \"CVNN\",\n",
     "    \"DSI\",\n",
+    "    \"LCCV\",\n",
+    "    \"VIASCKDE\",\n",
     "    ### Gauss\n",
     "    \"SILHOUETTE\",\n",
     "    \"DUNN\",\n",
@@ -451,21 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/real_world_experiments_standardized.tex`\n",
       "Generated: `latex/real_world_experiments_standardized (selected).tex`\n",
+      "Generated: `latex/real_world_experiments_standardized.tex`\n",
       "Generated: `latex/real_world_experiments (selected).tex`\n",
       "Generated: `latex/real_world_experiments.tex`\n",
-      "Generated: `latex/density_experiments.tex`\n",
-      "Generated: `latex/density_experiments (selected).tex`\n",
-      "Generated: `latex/density_experiments_standardized.tex`\n",
-      "Generated: `latex/density_experiments_standardized (selected).tex`\n"
+      "Generated: `latex/density_experiments_standardized (selected).tex`Generated: `latex/density_experiments_standardized.tex`\n",
+      "\n",
+      "Generated: `latex/density_experiments.tex`Generated: `latex/density_experiments (selected).tex`\n",
+      "\n"
      ]
     }
    ],
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +498,7 @@
        "1.6229067378440645"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +521,7 @@
        "47275.21919050223"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,25 +552,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.1673866481998462,\n",
-       " 0.16738664819984625,\n",
-       " 0.1673866481998461,\n",
-       " 0.1673866481998463,\n",
-       " 0.16738664819984614,\n",
-       " 0.1673866481998462,\n",
-       " 0.1673866481998462,\n",
-       " 0.16738664819984597,\n",
-       " 0.16738664819984586,\n",
-       " 0.1673866481998459]"
+       "[1.7125248320227824,\n",
+       " 1.7491498886700856,\n",
+       " 1.5734443722526668,\n",
+       " 1.6824502635722405,\n",
+       " 1.6564048633332913,\n",
+       " 1.6882179890285087,\n",
+       " 1.5548063794211258,\n",
+       " 1.7755537118481022,\n",
+       " 1.7491498886700858,\n",
+       " 1.712524832022782]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
