--- a/src/Experiments/RunDatasetsJupyterNotebooks.ipynb
+++ b/src/Experiments/RunDatasetsJupyterNotebooks.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -28,11 +37,11 @@
      "output_type": "stream",
      "text": [
       "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_dims.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoBlobs_dist.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/Noise.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
       "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_noise and minPoints.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoBlobs_dist.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/Noise.ipynb\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
