--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
      "start_time": "2024-07-03T14:10:29.446448Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,7 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.metrics import METRIC_ABBREV_TABLES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,18 +307,18 @@
     "    ### Competitors\n",
     "    \"DBCV\",\n",
     "    \"DCSI\",\n",
-    "    \"S_DBW\",\n",
-    "    \"CDBW\",\n",
-    "    \"CVDD\",\n",
-    "    \"CVNN\",\n",
-    "    \"DSI\",\n",
     "    \"LCCV\",\n",
     "    \"VIASCKDE\",\n",
+    "    \"CVDD\",\n",
+    "    \"CDBW\",\n",
+    "    \"CVNN\",\n",
+    "    # \"DSI\",\n",
     "    ### Gauss\n",
     "    \"SILHOUETTE\",\n",
-    "    \"DUNN\",\n",
-    "    \"DB\",\n",
-    "    \"CH\",\n",
+    "    \"S_DBW\",\n",
+    "    # \"DUNN\",\n",
+    "    # \"DB\",\n",
+    "    # \"CH\",\n",
     "]\n",
     "\n",
     "configs = {\n",
@@ -359,42 +359,42 @@
     "        \"latex_coloring_axis\": 0,\n",
     "        \"latex_coloring_selection\": None,\n",
     "    },\n",
-    "    \"real_world_colored_row_wise_selected\": {\n",
-    "        \"path\": \"results/real_world/\",\n",
-    "        \"latex_path\": \"latex/real_world_experiments (selected).tex\",\n",
-    "        \"dataset_names\": [dataset.name for dataset in RealWorldDatasets],\n",
-    "        \"aggregation_funcs\": [\"mean\"],\n",
-    "        \"metrics\": METRICS,\n",
-    "        \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
-    "        \"selection\": [\"value\"],\n",
-    "        \"caption\": \"Evaluating on real-world datasets. Row-wise Green of selected ones.\",\n",
-    "        \"categories\": [\n",
-    "            (\"Synth_low\", 8, \"Tabular data\"),\n",
-    "            (\"Weizmann\", 2, \"Video\"),\n",
-    "            (\"COIL20\", 3, \"Image\"),\n",
-    "            (\"Optdigits\", 5, \"MNIST\"),\n",
-    "        ],\n",
-    "        \"latex_coloring_axis\": 1,\n",
-    "        \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
-    "    },\n",
-    "    \"real_world_standardized_colored_row_wise_selected\": {\n",
-    "        \"path\": \"results/real_world_standardized/\",\n",
-    "        \"latex_path\": \"latex/real_world_experiments_standardized (selected).tex\",\n",
-    "        \"dataset_names\": [dataset.name for dataset in RealWorldDatasets],\n",
-    "        \"aggregation_funcs\": [\"mean\"],\n",
-    "        \"metrics\": METRICS,\n",
-    "        \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
-    "        \"selection\": [\"value\"],\n",
-    "        \"caption\": \"Evaluating on real-world datasets (standardized). Row-wise Green of selected ones.\",\n",
-    "        \"categories\": [\n",
-    "            (\"Synth_low\", 8, \"Tabular data\"),\n",
-    "            (\"Weizmann\", 2, \"Video\"),\n",
-    "            (\"COIL20\", 3, \"Image\"),\n",
-    "            (\"Optdigits\", 5, \"MNIST\"),\n",
-    "        ],\n",
-    "        \"latex_coloring_axis\": 1,\n",
-    "        \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
-    "    },\n",
+    "    # \"real_world_colored_row_wise_selected\": {\n",
+    "    #     \"path\": \"results/real_world/\",\n",
+    "    #     \"latex_path\": \"latex/real_world_experiments (selected).tex\",\n",
+    "    #     \"dataset_names\": [dataset.name for dataset in RealWorldDatasets],\n",
+    "    #     \"aggregation_funcs\": [\"mean\"],\n",
+    "    #     \"metrics\": METRICS,\n",
+    "    #     \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
+    "    #     \"selection\": [\"value\"],\n",
+    "    #     \"caption\": \"Evaluating on real-world datasets. Row-wise Green of selected ones.\",\n",
+    "    #     \"categories\": [\n",
+    "    #         (\"Synth_low\", 8, \"Tabular data\"),\n",
+    "    #         (\"Weizmann\", 2, \"Video\"),\n",
+    "    #         (\"COIL20\", 3, \"Image\"),\n",
+    "    #         (\"Optdigits\", 5, \"MNIST\"),\n",
+    "    #     ],\n",
+    "    #     \"latex_coloring_axis\": 1,\n",
+    "    #     \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
+    "    # },\n",
+    "    # \"real_world_standardized_colored_row_wise_selected\": {\n",
+    "    #     \"path\": \"results/real_world_standardized/\",\n",
+    "    #     \"latex_path\": \"latex/real_world_experiments_standardized (selected).tex\",\n",
+    "    #     \"dataset_names\": [dataset.name for dataset in RealWorldDatasets],\n",
+    "    #     \"aggregation_funcs\": [\"mean\"],\n",
+    "    #     \"metrics\": METRICS,\n",
+    "    #     \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
+    "    #     \"selection\": [\"value\"],\n",
+    "    #     \"caption\": \"Evaluating on real-world datasets (standardized). Row-wise Green of selected ones.\",\n",
+    "    #     \"categories\": [\n",
+    "    #         (\"Synth_low\", 8, \"Tabular data\"),\n",
+    "    #         (\"Weizmann\", 2, \"Video\"),\n",
+    "    #         (\"COIL20\", 3, \"Image\"),\n",
+    "    #         (\"Optdigits\", 5, \"MNIST\"),\n",
+    "    #     ],\n",
+    "    #     \"latex_coloring_axis\": 1,\n",
+    "    #     \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
+    "    # },\n",
     "    # Density Datasets\n",
     "    \"density_colored_column_wise\": {\n",
     "        \"path\": \"results/density/\",\n",
@@ -422,52 +422,48 @@
     "        \"latex_coloring_axis\": 0,\n",
     "        \"latex_coloring_selection\": None,\n",
     "    },\n",
-    "    \"density_colored_row_wise_selected\": {\n",
-    "        \"path\": \"results/density/\",\n",
-    "        \"latex_path\": \"latex/density_experiments (selected).tex\",\n",
-    "        \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
-    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
-    "        \"metrics\": METRICS,\n",
-    "        \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
-    "        \"selection\": [\"value\"],\n",
-    "        \"caption\": \"Evaluating on density datasets. Row-wise Green of selected ones.\",\n",
-    "        \"categories\": [],\n",
-    "        \"latex_coloring_axis\": 1,\n",
-    "        \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
-    "    },\n",
-    "    \"density_standardized_colored_row_wise_selected\": {\n",
-    "        \"path\": \"results/density_standardized/\",\n",
-    "        \"latex_path\": \"latex/density_experiments_standardized (selected).tex\",\n",
-    "        \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
-    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
-    "        \"metrics\": METRICS,\n",
-    "        \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
-    "        \"selection\": [\"value\"],\n",
-    "        \"caption\": \"Evaluating on density datasets (standardized). Row-wise Green of selected ones.\",\n",
-    "        \"categories\": [],\n",
-    "        \"latex_coloring_axis\": 1,\n",
-    "        \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
-    "    },\n",
+    "    # \"density_colored_row_wise_selected\": {\n",
+    "    #     \"path\": \"results/density/\",\n",
+    "    #     \"latex_path\": \"latex/density_experiments (selected).tex\",\n",
+    "    #     \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
+    "    #     \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "    #     \"metrics\": METRICS,\n",
+    "    #     \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
+    "    #     \"selection\": [\"value\"],\n",
+    "    #     \"caption\": \"Evaluating on density datasets. Row-wise Green of selected ones.\",\n",
+    "    #     \"categories\": [],\n",
+    "    #     \"latex_coloring_axis\": 1,\n",
+    "    #     \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
+    "    # },\n",
+    "    # \"density_standardized_colored_row_wise_selected\": {\n",
+    "    #     \"path\": \"results/density_standardized/\",\n",
+    "    #     \"latex_path\": \"latex/density_experiments_standardized (selected).tex\",\n",
+    "    #     \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
+    "    #     \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "    #     \"metrics\": METRICS,\n",
+    "    #     \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
+    "    #     \"selection\": [\"value\"],\n",
+    "    #     \"caption\": \"Evaluating on density datasets (standardized). Row-wise Green of selected ones.\",\n",
+    "    #     \"categories\": [],\n",
+    "    #     \"latex_coloring_axis\": 1,\n",
+    "    #     \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
+    "    # },\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/real_world_experiments_standardized (selected).tex`\n",
       "Generated: `latex/real_world_experiments_standardized.tex`\n",
-      "Generated: `latex/real_world_experiments (selected).tex`\n",
       "Generated: `latex/real_world_experiments.tex`\n",
-      "Generated: `latex/density_experiments_standardized (selected).tex`Generated: `latex/density_experiments_standardized.tex`\n",
-      "\n",
-      "Generated: `latex/density_experiments.tex`Generated: `latex/density_experiments (selected).tex`\n",
-      "\n"
+      "Generated: `latex/density_experiments_standardized.tex`\n",
+      "Generated: `latex/density_experiments.tex`\n"
      ]
     }
    ],
@@ -482,14 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +487,7 @@
        "1.6229067378440645"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +510,7 @@
        "47275.21919050223"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +559,7 @@
        " 1.712524832022782]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
