--- a/src/Experiments/RunDatasetsJupyterNotebooks.ipynb
+++ b/src/Experiments/RunDatasetsJupyterNotebooks.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -29,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_dims.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_noise and minPoints.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoBlobs_dist.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
       "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/Noise.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_noise and minPoints.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_dims.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoBlobs_dist.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +90,7 @@
     "    im2 = im.crop(invert_im.getbbox())\n",
     "    im2.save(path)\n",
     "\n",
-    "for path in glob.glob(\"imgs/*\"):\n",
+    "for path in glob.glob(\"imgs/**/*.png\", recursive=True):\n",
     "    crop_png(path)"
    ]
   },
@@ -113,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stuff",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
