--- a/src/Error.ipynb
+++ b/src/Error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,8 +37,9 @@
        "nan"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,27 +60,11 @@
      "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'NoneType'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[19], line 5\u001b[0m\n",
-      "\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mEvaluation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cdbw_score\n",
-      "\u001b[1;32m      4\u001b[0m X, l \u001b[38;5;241m=\u001b[39m DensityDatasets\u001b[38;5;241m.\u001b[39mchainlink\u001b[38;5;241m.\u001b[39mstandardized_data_cached\n",
-      "\u001b[0;32m----> 5\u001b[0m \u001b[43mcdbw_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\n",
-      "File \u001b[0;32m/export/share/pascalw777dm/DISCO/src/Evaluation/CDBW/cdbw.py:588\u001b[0m, in \u001b[0;36mcdbw_score\u001b[0;34m(X, labels, metric, alg_noise, intra_dens_inf, s, multipliers)\u001b[0m\n",
-      "\u001b[1;32m    586\u001b[0m labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(labels)\n",
-      "\u001b[1;32m    587\u001b[0m distvec \u001b[38;5;241m=\u001b[39m gen_dist_func(metric)\n",
-      "\u001b[0;32m--> 588\u001b[0m n_clusters, stdev, dimension, n_points_in_cl, n_max, coord_in_cl, labels_in_cl \u001b[38;5;241m=\u001b[39m \u001b[43mprep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;32m    589\u001b[0m mean_arr, n_rep, n_rep_max, rep_in_cl \u001b[38;5;241m=\u001b[39m rep(n_clusters, dimension, n_points_in_cl, coord_in_cl, labels_in_cl)\n",
-      "\u001b[1;32m    590\u001b[0m middle_point, dist_min, n_cl_rep \u001b[38;5;241m=\u001b[39m closest_rep(X, n_clusters, rep_in_cl, n_rep, metric, distvec)\n",
-      "\n",
-      "File \u001b[0;32m/export/share/pascalw777dm/DISCO/src/Evaluation/CDBW/cdbw.py:167\u001b[0m, in \u001b[0;36mprep\u001b[0;34m(X, labels)\u001b[0m\n",
-      "\u001b[1;32m    165\u001b[0m std1_cl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(shape\u001b[38;5;241m=\u001b[39mn_clusters, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n",
-      "\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_clusters):\n",
-      "\u001b[0;32m--> 167\u001b[0m     \u001b[43mn_points_in_cl\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m Counter(labels)\u001b[38;5;241m.\u001b[39mget(i)\n",
-      "\u001b[1;32m    168\u001b[0m     stdv1_cl[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstd(X[labels \u001b[38;5;241m==\u001b[39m i], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[1;32m    169\u001b[0m     std1_cl[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(stdv1_cl[i]\u001b[38;5;241m.\u001b[39mT, stdv1_cl[i])\n",
-      "\n",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mEvaluation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cdbw_score\n\u001b[1;32m      4\u001b[0m X, l \u001b[38;5;241m=\u001b[39m DensityDatasets\u001b[38;5;241m.\u001b[39mchainlink\u001b[38;5;241m.\u001b[39mstandardized_data_cached\n\u001b[0;32m----> 5\u001b[0m \u001b[43mcdbw_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/export/share/pascalw777dm/DISCO/src/Evaluation/CDBW/cdbw.py:588\u001b[0m, in \u001b[0;36mcdbw_score\u001b[0;34m(X, labels, metric, alg_noise, intra_dens_inf, s, multipliers)\u001b[0m\n\u001b[1;32m    586\u001b[0m labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(labels)\n\u001b[1;32m    587\u001b[0m distvec \u001b[38;5;241m=\u001b[39m gen_dist_func(metric)\n\u001b[0;32m--> 588\u001b[0m n_clusters, stdev, dimension, n_points_in_cl, n_max, coord_in_cl, labels_in_cl \u001b[38;5;241m=\u001b[39m \u001b[43mprep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    589\u001b[0m mean_arr, n_rep, n_rep_max, rep_in_cl \u001b[38;5;241m=\u001b[39m rep(n_clusters, dimension, n_points_in_cl, coord_in_cl, labels_in_cl)\n\u001b[1;32m    590\u001b[0m middle_point, dist_min, n_cl_rep \u001b[38;5;241m=\u001b[39m closest_rep(X, n_clusters, rep_in_cl, n_rep, metric, distvec)\n",
+      "File \u001b[0;32m/export/share/pascalw777dm/DISCO/src/Evaluation/CDBW/cdbw.py:167\u001b[0m, in \u001b[0;36mprep\u001b[0;34m(X, labels)\u001b[0m\n\u001b[1;32m    165\u001b[0m std1_cl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(shape\u001b[38;5;241m=\u001b[39mn_clusters, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_clusters):\n\u001b[0;32m--> 167\u001b[0m     \u001b[43mn_points_in_cl\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m Counter(labels)\u001b[38;5;241m.\u001b[39mget(i)\n\u001b[1;32m    168\u001b[0m     stdv1_cl[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstd(X[labels \u001b[38;5;241m==\u001b[39m i], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m    169\u001b[0m     std1_cl[i] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(stdv1_cl[i]\u001b[38;5;241m.\u001b[39mT, stdv1_cl[i])\n",
       "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a real number, not 'NoneType'"
      ]
     }
@@ -91,6 +76,13 @@
     "X, l = DensityDatasets.chainlink.standardized_data_cached\n",
     "cdbw_score(X, l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -100,7 +92,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
