--- a/src/__setup.ipynb
+++ b/src/__setup.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
     "print(\"Do you really want to clear the cache?\")\n",
     "if input() in [\"y\", \"yes\"]:\n",
     "    !rm ./.cache/*\n",
-    "    !rm ./datasets/.cache/*\n",
+    "    # !rm ./datasets/.cache/*\n",
     "    print(\"Cache cleared.\")\n",
     "else:\n",
     "    print(\"Cache NOT cleared.\")"
