--- a/src/Error.ipynb
+++ b/src/Error.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "0.007333775328670266"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,11 +128,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7220799613425811"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets.real_world_datasets import Datasets as RealWorldDatasets\n",
+    "from src.Evaluation.LCCV.lccv import lccv_score as LCCV\n",
+    "\n",
+    "X, l = RealWorldDatasets.COIL20.standardized_data_cached\n",
+    "LCCV(X, l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/export/share/pascalw777dm/DISCO/src/Evaluation/VIASCKDE/viasckde.py:34: RuntimeWarning: invalid value encountered in divide\n",
+      "  isos = (isos - min(isos)) / (max(isos) - min(isos))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datasets.real_world_datasets import Datasets as RealWorldDatasets\n",
+    "from src.Evaluation.VIASCKDE.viasckde import viasckde_score\n",
+    "\n",
+    "X, l = RealWorldDatasets.COIL20.standardized_data_cached\n",
+    "viasckde_score(X, l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets.density_datasets import Datasets as DensityDatasets\n",
+    "import numpy as np\n",
+    "from src.Evaluation.DBCV.dbcv_new import validity_index as DBCV\n",
+    "\n",
+    "RUNS = 100\n",
+    "\n",
+    "res = []\n",
+    "\n",
+    "X, l = DensityDatasets.cluto_t4_8k.standardized_data_cached\n",
+    "X = X[l != -1]\n",
+    "l = l[l != -1]\n",
+    "np.random.seed(0)\n",
+    "seeds = np.random.choice(10_000, size=RUNS, replace=False)\n",
+    "for run in range(RUNS):\n",
+    "    np.random.seed(seeds[run])\n",
+    "    shuffle_data_index = np.random.choice(len(X), size=len(X), replace=False)\n",
+    "    X_ = X[shuffle_data_index]\n",
+    "    l_ = l[shuffle_data_index]\n",
+    "    res.append(DBCV(X_, l_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.21863307900890888, 0.07831705413543397)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = np.array(res)\n",
+    "res.mean(), res.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "stuff",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
