--- a/src/Experiments/MotivationExample.ipynb
+++ b/src/Experiments/MotivationExample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['DISCO', 'DBCV', 'DCSI', 'LCCV', 'VIASCKDE', 'CVDD', 'CDBW', 'CVNN', 'SILHOUETTE', 'S_DBW'])"
+       "dict_keys(['DISCO', 'DBCV', 'DBCV_eucl', 'DCSI', 'LCCV', 'VIASCKDE', 'CVDD', 'CDBW', 'CVNN', 'SILHOUETTE', 'S_DBW'])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,6 +57,7 @@
     "from src.utils.metrics import METRICS\n",
     "METRICS[\"DISCO\"].__name__ = \"disco_score\"\n",
     "METRICS[\"DBCV\"].__name__ = \"dbcv_score\"\n",
+    "METRICS[\"DBCV_eucl\"].__name__ = \"dbcv_score_eucl\"\n",
     "METRICS[\"DCSI\"].__name__ = \"dcsi_score\"\n",
     "METRICS.keys()"
    ]
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,8 @@
      "output_type": "stream",
      "text": [
       "disco_score: 0.87\n",
-      "dbcv_score: 0.03\n",
+      "dbcv_score: 0.95\n",
+      "dbcv_score_eucl: 0.45\n",
       "dcsi_score: 1.0\n",
       "lccv_score: 0.68\n",
       "viasckde_score: 0.48\n",
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +190,8 @@
      "output_type": "stream",
      "text": [
       "disco_score: -0.01\n",
-      "dbcv_score: -0.18\n",
+      "dbcv_score: -0.99\n",
+      "dbcv_score_eucl: -0.7\n",
       "dcsi_score: 0.22\n",
       "lccv_score: 0.03\n",
       "viasckde_score: 0.37\n",
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +261,8 @@
      "output_type": "stream",
      "text": [
       "disco_score: 0.67\n",
-      "dbcv_score: 0.03\n",
+      "dbcv_score: 0.79\n",
+      "dbcv_score_eucl: 0.38\n",
       "dcsi_score: 1.0\n",
       "lccv_score: 0.67\n",
       "viasckde_score: 0.21\n",
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +334,8 @@
      "output_type": "stream",
      "text": [
       "disco_score: 0.22\n",
-      "dbcv_score: 0.03\n",
+      "dbcv_score: 0.4\n",
+      "dbcv_score_eucl: 0.24\n",
       "dcsi_score: 1.0\n",
       "lccv_score: 0.36\n",
       "viasckde_score: 0.38\n",
